# hackerverse

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .npmrc  .prettierrc.json  Cargo.toml  Dockerfile.build-data  Dockerfile.calc-comment-post-ids  Dockerfile.calc-post-canon-ids  Dockerfile.crawler  Dockerfile.edge-caddy  Dockerfile.embedder  Dockerfile.enqueuer  Dockerfile.hn-crawler  Dockerfile.hn-enqueuer  Dockerfile.hnsw-server  Dockerfile.nodejs-base  Dockerfile.python-base  Dockerfile.runpod-base  Dockerfile.rust-base  Dockerfile.telegraf  Dockerfile.umap  Dockerfile.uvicorn-base  Notes.md  README.md  docker-compose.yaml  format  jest.config.js  package.json  promtail.yaml  requirements.txt  schema.sql  tsconfig.json
admin/: main.py
als/: main.py
api/: main.py  main.ts  query.ts
api-embed-node/: download_model.py  main.py
api-embed-node-broker/: main.ts
api-worker-broker/: main.ts
api-worker-node/: main.py
app/: const.ts  deploy.js  imports.d.ts  index.css  index.html  index.tsx  worker.PointLabels.ts  worker.PointMap.ts
build-ann/: main.py
build-api-data/: main.py
build-data/: common.rs  export_comment_embs.rs  export_comment_sentiments.rs  export_comment_texts.rs  export_comments.rs  export_interactions.rs  export_post_embs.rs  export_post_embs_bgem3_dense.rs  export_post_texts.rs  export_post_titles.rs  export_posts.rs  export_url_metas.rs  export_url_texts.rs  export_urls.rs  export_users.rs  main.rs
build-edge-data/: main.py
build-embs/: main.py
build-map/: main.py
build-nn-data/: main.rs
calc-comment-post-ids/: main.rs
calc-post-canon-ids/: main.rs
common/: api_data.py  arrow.rs  const.ts  crawl.rs  data.py  data_gpu.py  emb_data.py  heatmap.py  lib.rs  mat.rs  msgpack.rs  parse.rs  res.ts  terrain.py  util.py
crawler/: archive.rs  crawl.rs  direct.rs  docker.entrypoint.sh  main.rs  main.ts  origin.rs  parse.rs  telegraf.conf  worker_embed.py
crawler-archive/: main.rs
edge/: Caddyfile  main.rs
embedder/: docker.entrypoint.sh  download_model.py  main.ts  promtail.yaml  telegraf.conf  worker_embed.py  worker_embed.ts
(+92 files in other folders)
