[package]
name = "hndr"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
arrow = "51.0.0"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
itertools = "0.12.1"
reqwest = "0.12.3"
rmp-serde = "1.1.2"
rmpv = { version = "1.0.1", features = ["with-serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
tokio = { version = "1.37.0", features = ["full"] }

[lib]
name = "common"
path = "common/lib.rs"

[[bin]]
name = "build-data"
path = "build-data/main.rs"

[[bin]]
name = "build-nn-data"
path = "build-nn-data/main.rs"

[[bin]]
name = "calc-post-canon-ids"
path = "calc-post-canon-ids/main.rs"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
