[package]
name = "hndr"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
arrow = "51.0.0"
cadence = "1.3.0"
chrono = { version = "0.4.37", features = ["serde"] }
dashmap = "5.5.3"
db-rpc-client-rs = "0.1.1"
futures = "0.3.30"
itertools = "0.12.1"
once_cell = "1.19.0"
queued-client-rs = "0.1.1"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
rmp-serde = "1.1.2"
rmpv = { version = "1.0.1", features = ["with-serde"] }
scraper = { version = "0.19.0", features = ["atomic"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.115"
serde_with = "3.7.0"
service-toolkit = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }

[lib]
name = "common"
path = "common/lib.rs"

[[bin]]
name = "build-data"
path = "build-data/main.rs"

[[bin]]
name = "build-nn-data"
path = "build-nn-data/main.rs"

[[bin]]
name = "crawler"
path = "crawler/main.rs"

[[bin]]
name = "crawler-archive"
path = "crawler-archive/main.rs"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
